samples/_failures_safe/1761702552_4ad1aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9b66e17.c: In function ‘main’:
./samples/SAFE/__tmp_f9b66e17.c:121:9: error: expected expression at end of input
  121 |         if (
      |         ^~
./samples/SAFE/__tmp_f9b66e17.c:121:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f9b66e17.c:121:9: error: expected declaration or statement at end of input
